RESOLVED FIXED243473
[Interop 2021] css/css-sizing/aspect-ratio/flex-aspect-ratio-002 failing
https://bugs.webkit.org/show_bug.cgi?id=243473
Summary [Interop 2021] css/css-sizing/aspect-ratio/flex-aspect-ratio-002 failing
Sammy Gill
Reported 2022-08-02 15:49:05 PDT
css/css-sizing/aspect-ratio/flex-aspect-ratio-002 failing is currently failing on WPT
Attachments
Radar WebKit Bug Importer
Comment 1 2022-08-02 15:50:04 PDT
Sammy Gill
Comment 2 2022-08-04 14:05:59 PDT
EWS
Comment 3 2022-08-24 14:23:37 PDT
Committed 253740@main (588e20666a36): <https://commits.webkit.org/253740@main> Reviewed commits have been landed. Closing PR #3025 and removing active labels.
Sammy Gill
Comment 4 2022-09-09 12:45:40 PDT
*** Bug 243567 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.